@@ -13,6 +13,7 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Properties;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
@@ -61,17 +62,31 @@ public class FileUtils {
         }
     }
 
-    public static String getAbsolutePathS(String relativePath) {
-        return System.getProperty("user.dir") + relativePath;
+    public static String getValueConfig(String properties, String key) {
+        String path = ((properties.equalsIgnoreCase("config")) ? "src/test/resources/config.properties" : "src/test/resources/application.properties");
+        Properties properties1 = new Properties();
+        try {
+            properties1.load(new FileInputStream(path));
+            return properties1.getProperty(key);
+        } catch (IOException e) {
+            Logger.getLogger(Helper.class.getName()).log(Level.SEVERE, String.format("Error in read values %s", e.getMessage()));
+            return null;
+        }
+    }
+
+    public static String getAbsolutePathString(String relativePath) {
+        return getAbsolutePath(relativePath).toString();
     }
 
     public static Path getAbsolutePath(String relativePath) {
-        return Path.of(getAbsolutePathS(relativePath));
+        Path  absolutePath = Paths.get(relativePath).toAbsolutePath();
+        Logger.getLogger(FileUtils.class.getName()).log(Level.SEVERE, String.format("Absolute path: %s", absolutePath.toString()));
+        return  absolutePath;
     }
 
     public static String readJson(String relativePath) {
         try {
-            return java.nio.file.Files.readString(java.nio.file.Paths.get(getAbsolutePathS(relativePath)));
+            return java.nio.file.Files.readString(getAbsolutePath(relativePath));
         } catch (IOException e) {
             Logger.getLogger(FileUtils.class.getName()).log(Level.SEVERE, "Error reading JSON file", e.getMessage());
             return null;
@@ -90,7 +105,7 @@ public class FileUtils {
 
     public static void saveHTMLCode(WebDriver driver) {
         String nombreArchivo = String.format("codigoHTML_%s.html", getFormattedCurrentDate("yyyy-MM-dd-(HH-mm-ss)"));
-        String rutabase = getAbsolutePathS("/target/html");
+        String rutabase = getAbsolutePathString("target/html");
         File directorio = new File(rutabase);
         if (!directorio.exists()) {
             directorio.mkdirs();
